--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
@@ -24,6 +25,8 @@
     "react-router-restore-scroll": "0.0.1",
     "react-scripts": "4.0.0",
     "react-scroll-manager": "^1.0.3",
+    "react-scroll-to": "^3.0.0-beta.6",
+    "scroll-to": "0.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
