--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
+    "multiselect-react-dropdown": "^1.6.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-db-google-sheets": "^2.1.1",
     "react-dom": "^17.0.1",
     "react-ga": "^3.2.1",
@@ -28,6 +30,7 @@
     "react-scroll-manager": "^1.0.3",
     "react-scroll-to": "^3.0.0-beta.6",
     "scroll-to": "0.0.2",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
