--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-ga": "^3.2.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.1.0",
     "react-moment": "^1.0.0",
     "react-owl-carousel": "^2.3.1",
     "react-phone-number-input": "^3.1.8",
