--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-restore-scroll": "0.0.1",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
+    "react-scroll-horizontal": "^1.6.6",
     "react-scroll-manager": "^1.0.3",
     "react-scroll-to": "^3.0.0-beta.6",
     "react-star-ratings": "^2.3.0",
